--- a/src/components/components_css/UrlRequester.css
+++ b/src/components/components_css/UrlRequester.css
@@ -78,6 +78,8 @@
   font-size: 16px;
   transition: border-color 0.3s ease;
   font-family: "Montserrat", sans-serif;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  border: 1px solid black;
 }
 
 .url-input:focus {
@@ -94,25 +96,11 @@
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  margin-top: 2%;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  border: 0.5px solid black;
 }
 
 .url-button:hover {
   background-color: #0056b3;
-}
-
-.response, .error {
-  margin-top: 20px;
-  width: 80%;
-  max-width: 600px;
-  word-wrap: break-word;
-}
-
-.response pre, .error p {
-  background-color: #f8f8f8;
-  padding: 10px;
-  border-radius: 5px;
-}
-
-.error p {
-  color: #d9534f;
 }
