--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
 
 :root {
-  background-image: url('./assets/polygon-scatter-haikei.svg');
+  background-image: url('./assets/stacked-peaks-haikei.svg');
   aspect-ratio: 960 / 540;
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  box-shadow: rgba(0, 0, 0, 0.45) 1px 1px 40px 0px inset;
 }
-
-.body {
-  background-color: #94618e;
-  margin-left: 10%;
-  margin-right: 10%;
-  height: 100vh;
-  border-radius: 15px;
-  box-shadow: 5px 5px 10px 2px #f8eee7;
-}
-
 .header {
   display: flex;
   flex-direction: column;
@@ -28,7 +20,7 @@ h1 {
   font-family: "Concert One", sans-serif;
   font-weight: 800;
   font-style: bold;
-  font-size: 3rem;
+  font-size: 5rem;
   color: #f8eee7;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
@@ -38,25 +30,3 @@ h1 {
   display: flex;
   gap: 2rem;
 }
-
-/* .header { */
-/*   display: flex; */
-/*   flex-direction: column; */
-/*   color: red; */
-/*   align-items: center; */
-/*   border: 2px solid red; */
-/*   padding: 3rem;  */
-/* } */
-/**/
-/* .icons { */
-/*   display: flex; */
-/*   justify-content: space-evenly; */
-/*   gap: 50%; */
-/*   padding: 1.5em; */
-/* } */
-/**/
-/* p { */
-/*   color: yellow; */
-/*   border: 2px solid red; */
-/*   margin-top: 3em; */
-/* } */
