--- a/src/components/components_css/UrlRequester.css
+++ b/src/components/components_css/UrlRequester.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
+a {
+  text-decoration: none;
+}
+
 .shortened-url {
   margin-top: 2em;
   font-size: 25px;
